_sass/_components.scss
@use "vendor/sanitize.css/forms";
@use "util/typography" as *;
@use "util/spacing" as *;
@use "util/grid" as *;
@use "util/media" as *;
@use "base";

@mixin vertical-gradient($from-color, $to-color) {
  background: linear-gradient(to bottom, $from-color 0%, $to-color 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
}

/**
 * Site header
 */
.site-header {
  @include padding-y(4);
  background-color: var(--grey-color-dark);
  color: var(--grey-color-light);
}

.site-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;

  .site-title {
    flex-shrink: 0;
    @include margin(right, 4);
    color: #ffffff;
    font-size: $font-xlarge;
    text-transform: uppercase;

    a,
    a:visited {
        color: #ffffff;
    }
  }
  
  .menu-icon {
    display: block;

    a, button {
      display: flex;
      align-items: center;
      @include padding-x(3);
      @include padding-y(2);
      border: 1px solid var(--grey-color-light);
      border-radius: 5px;
    }

    svg {
      width: 3 * $base-unit;
      height: 3 * $base-unit;

      color: var(--grey-color-light);
    }

    @include breakpoint($bp-large) { display: none; }
  }

  .nav-links {
    display: none;
    width: 100%;

    @include breakpoint($bp-large) {
      display: flex;
      align-items: center;
      width: auto;
    }
  }
  .nav-links-open { display: block; }

  .nav-link {
    display:block;
    @include margin-y(1);
    @include padding-y(2);
    color: #ffffff;

    @include breakpoint($bp-large) {
      display: inline-block;
      @include margin-y(0);
      @include margin(right, 4);

      &:last-child { margin-right: 0; }
    }
  }

  .nav-link-search {
    width: $font-base * 1.5;
    height: $font-base * 1.5 + 4 * $base-unit;

    &:hover {
      text-decoration: none;
    }
  }
  
  .current {
    @include padding-x(4);
    background-color: var(--background-color);
    color: var(--grey-color-dark);
  }

  .menu-download {
    @include vertical-gradient(var(--brand-color-light), var(--brand-color));
    @include padding-x(4);
    color: #ffffff !important;
    text-align: center;

    @include breakpoint($bp-large) {

    }
  }
}

/**
 * Documentation header
 */
.doc-header {
  @include padding-y(4);
  border-bottom: 1px solid var(--grey-color-light);

  .doc-header-container {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: flex-start;
    gap: calc($bp-xlarge / 40);
  }

  .doc-header-title {
    display: none;

    @include breakpoint($bp-large) {
      display: block;
      max-width: calc($bp-xlarge / 3);
    }
  }

  .doc-header-search {
    flex-grow: 1;
    max-width: calc(2 * $bp-xlarge / 3);
  }

  .doc-title {
    @include margin-y(0);
    font-size: $font-xlarge;
  }
}

/**
 * Sidebar (for documentation navigation)
 */
%sidebar-nav-item {
  @include padding-y(1);
  min-height: 4 * $base-unit;
}

.sidebar {
  border: 1px solid var(--grey-color-dark);
  @include padding(left, 2);

  @include breakpoint($bp-large) {
    padding-left: 0;
    border-top: 0;
    border-bottom: 0;
    border-left: 0;
    border-right: 1px solid var(--grey-color-light);
  }

  .doc-sections {
    display: none;

    @include breakpoint($bp-large) {
      display: block;
      font-size: $font-small;
    }

    a {
      display: block;
      font-weight: normal;
    }
    .current > a { font-weight: bold; }
  }

  .doc-sections-open { display: block; }

  .doc-section::before, .doc-item::before { content: ""; }
  .doc-section > ul { display: none; }
  .doc-section-current > ul { display: block; }
  .doc-section-current .doc-section-expander { transform: rotate(180deg); }
  .doc-section-title {
    @extend %sidebar-nav-item;
    position: relative;
    cursor: pointer;
    font-weight: bold;

    &:hover { 
      text-decoration: underline; 
      .doc-section-expander { color: var(--grey-color-dark); }
    }
  }
  .doc-section-expander {
    position: absolute;
    right: 0;
    @include padding-x(2);
    width: 8 * $base-unit;
    height: $font-small * 1.5;  // 1.5 = line-height
    color: var(--grey-color);
  }
  .doc-section-title-text {
    display: block;
    @include margin(right, 8); 
  }

  .doc-item {
    @include padding(left, 4);
    @extend %sidebar-nav-item; 
  }

  .doc-toc {
    @include padding(left, 4);
    @include padding-y(1);
    font-size: $font-xsmall;

    a { 
      display: inline;
      color: var(--grey-color-dark) !important;
    }
  }
}

.doc-title {
  .doc-title-expander {
    position: absolute;
    right: 0;
    width: $font-base * 1.5 + 4 * $base-unit;
    height: $font-base * 1.5; // 1.5 = line-height
    @include padding-x(2);
  }
  .doc-title-expander-open { transform: rotate(180deg); }

  @include breakpoint($bp-large) { 

    .doc-title-expander { display: none; }
  }
}


/**
 * Site footer
 */
.site-footer {
  border-top: 1px solid var(--grey-color-light);
  @include padding-y(4);
}

.footer-message {
  font-size: $font-base;
  color: var(--grey-color);
  text-align: right;

  p { @include margin-y(2); }
  a { font-weight: normal; }
}

/**
 * Page content
 */
.page-content {

}

.page-heading {

}

.post-list {
  margin-left: 0;
  padding-left: 0;
  list-style: none;

  > li { @include margin(bottom, 4); }
  h2 { 
    margin-top: 0 !important;
    @include margin-text(bottom, 4); 
    @include lead(snug);
  }
}

.post-meta {
  font-size: $font-small;
  color: var(--grey-color);
  // h1.post-title has a margin-bottom of 2
  h1.post-title + & { @include margin-text(top, -2); }
}

.post-link {
  display: block;
  font-size: $font-xxlarge;
}



/**
 * Posts
 */
.post-header {
  @include margin(bottom, 4);
}

.post-title {
  @include margin-text(top, 2);
  @include lead(snug);
  font-size: $font-3xlarge;
}

.post-content {
  @include margin-y(6);

  h1, h2, h3, h4, h5, h6 {
    @include margin-text(top, 6);
  }
  h2 + *, h3 + *, h4 + *, h5 + *, h6 + * {
    margin-top: 0;
  }

  hr {
    @include margin-y(12);
  }
  hr + * {
    margin-top: 0;
  }

  table {
    // .table is from _base.scss
    @extend .table;
  }
}


/**
 * Home page
 */
.home {
  .hero-panel {
    @include vertical-gradient(var(--grey-color-super-light), var(--grey-color-light));
    @include padding-y(16);
    @include margin(bottom, 8);

    .hero-content {
      max-width: $bp-medium;

      h1 {
        margin: 0;
        color: var(--grey-color-dark);
        @include lead(tight);
        font-size: $font-3xlarge !important;
        font-weight: normal;
      }

      p { 
        @include margin(top, 6); 
        margin-bottom: 0;
      }
    }

    .hero-title {
      color: #000000;
      font-size: $font-3xlarge * 1.5;
      font-weight: bold;
    }
  }

  .panels-wrapper-3 {
    @include breakpoint($bp-medium) {
      display: grid;
      @include grid-columns(2);
      gap: 4 * $base-unit;
      @include margin(bottom, 8);
    }

    @include breakpoint($bp-large) {
      @include grid-columns(3);
    }
  }

  .panel {
    @include margin(bottom, 8);
    @include padding(bottom, 8);
    border-bottom: 1px solid var(--grey-color-light);

    &:last-child { border-bottom: 0; }

    @include breakpoint($bp-medium) {
      margin-bottom: 0;
      padding-bottom: 0;
      border-bottom: 0;
    }
  }

  a.front-link {
    color: #ffffff;
    display: inline-block;
    margin: 0;
    @include padding-y(3);
    @include padding-x(4);
    @include vertical-gradient(var(--grey-color), var(--grey-color-dark));
    @include lead(tight);

    &:hover {
      background-color: var(--grey-color-dark);
      background-image: none;
    }
  }

  .hero-panel a.front-link, .downloads-panel a.front-link {
    @include vertical-gradient(var(--brand-color-light), var(--brand-color));
        
    &:hover {
      background-color: var(--brand-color-light);
      background-image: none;
    }
  }
}


/**
 * Releases
 */
.release-download {
  float: right;
  font-size: $font-xlarge;
  @include margin(bottom, 4);
  @include margin(left, 4);
  @include lead(tight);
  text-align: center;

  a {
    color: #ffffff;
    display: inline-block;
    @include padding-y(3);
    @include padding-x(4);
    @include vertical-gradient(var(--grey-color), var(--grey-color-dark));
        
    &:hover {
      background-color: var(--grey-color-dark);
      background-image: none;
    }
  }
}


/**
 * Documentation
 */
.doc-section-title-text { display: inline; }  // Overridden in sidebar

.doc-hidden-header-search {
  @include padding-y(8);
  border-bottom: 1px solid var(--grey-color-light);

  form {
    margin: 0 auto;
    max-width: calc($bp-xlarge / 2);
  }
}

.doc .note, .doc .warning, .doc .error {
  @include margin-y(2);
  @include padding-all(4);

  border-left: 4px solid var(--grey-color);
  display: flex;
  align-items: center;
}
.doc .note-icon {
  flex: 0 0 auto;
  width: 8 * $base-unit;
  @include margin(right, 4);
}
.doc .note-content { 
  flex: 1 1 auto;
  @include lead(snug); 
}

.doc .note {
  background-color: var(--blue-color-light);
  border-left-color: var(--blue-color);
  .note-icon { color: var(--blue-color); }
}
.doc .warning { 
  background-color: var(--yellow-color-light);
  border-left-color: var(--yellow-color);
  .note-icon { color: var(--yellow-color); }
}
.doc .error {
  background-color: var(--red-color-light);
  border-left-color: var(--red-color);
  .note-icon { color: var(--red-color); }
}

.doc .anchorjs-link {
  color: var(--grey-color-light);
  &:hover { text-decoration: none; }
}

.edit-docs {
  @include margin-y(8);
  @include padding-y(8);
  border-top: 1px solid var(--grey-color-light);
  font-size: $font-small;

  a, a:visited { 
    color: var(--grey-color);
    border-bottom: 1px dotted var(--grey-color);
  }
  a:hover {
    color: var(--text-color);
    text-decoration: none;
    border-bottom: 1px solid var(--text-color);
  }
}

/**
 * Syntax highlighting
 */
pre[class*="language-"] {
    margin-left: 40px;
    @extend %vertical-rhythm;
}

/**
 * Search
 */
.search-app {
  form {
    display: flex;
    flex-flow: row no-wrap;
    justify-content: space-between;
  }

  .search-results {
    font-size: $font-small;
        
    ul { 
      list-style: none; 
      padding-left: 0;
      margin: 0;
    }
    a {
      display: block;
      @include padding-x(2);
      @include padding-y(1);

      .result-preview {
        font-weight: normal;
        color: var(--grey-color);
      }
    }
    a:hover, a:focus {
      text-decoration: none;
      background-color: var(--grey-color-super-light);
    }
    .search-results-head {
      color: var(--grey-color-dark);
      font-weight: bold;
      @include padding-x(2);
      @include margin-y(2);
    }
    .result-title { font-weight: bold; }
  }
}

.search-app-search-widget {
  display: flex;
  flex-grow: 1;
  @extend input;

  input {
    border: 0;
    padding: 0;
    flex-grow: 1;
  }
  input:focus { border: 0; }

  .search-icon {
    background-color: var(--grey-color-super-light);
    color: var(--grey-color);
    border: 1px solid var(--grey-color);
    border-radius: 3px;
    font-size: $font-xsmall;
    padding: 0.2em;
    @include padding-x(2);
  }
}

/**
 * AlpineJS
 */
[x-cloak] { display: none; }

